built-in-references/kubernetes/ingress-hostnames-conflict/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureUniqueIngressHost
metadata:
  name: ingress-hostnames-conflict
spec:
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
    namespaceSelector:
      matchExpressions:
      - key: control-plane
        operator: DoesNotExist
